--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
 {
 	"name": "Queen Lora (v4)",
 	"description": "Fully Costamisable Bot by, Omindu Anjana.",
-	"repository": "https://github.com/OMINDUANJANA/WhatsAppBot-MD",
+	"repository": "htthttps://github.com/OMINDUANJANA/Queen-Lora-V4-.git",
 	"website": "https://small-sharp-tool.com/",
 	"logo": "https://avatars.githubusercontent.com/u/64305844?v=4",
 	"keywords": ["multi-device","Omindu-Anjana"],
